@@ -4,15 +4,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.howtodoinjava</groupId>
   <artifactId>virtual-threads-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>virtual-threads-demo</name>
   <url>https://howtodoinjava.com</url>
-
-  <properties>
-    <java.version>19</java.version>
-  </properties>
 
   <parent>
     <groupId>com.howtodoinjava</groupId>
@@ -35,15 +30,15 @@
 
   <build>
     <plugins>
-      <plugin>
+      <!--<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>19</source>
           <target>19</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <compilerArgs>&#45;&#45;enable-preview</compilerArgs>
         </configuration>
-      </plugin>
+      </plugin>-->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
